# otis-core

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE-COMMERCIAL.txt  MATH.md  README.md
.github/workflows/: build.yml
examples/: mock_sensor_feed.cpp  mock_telemetry_feed.cpp
include/otis_core/: kcm_math.hpp  otis_core.hpp
python-validation/: kcm_validate.py  stereo_disparity_poc.py  volume_anomaly_detector.py
src/: kinematics_math.cpp
src/bypasses/: ffmpeg_bypass_layer.cpp
web-demo/: kcm_visualizer.html
web-demo/js/: kcm_engine.js
web-demo/shaders/: kcm_fragment.glsl  volume_penalty.glsl
